--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,16 @@
   <!-- External CSS -->
   <link href="/static/style.css?v=9" rel="stylesheet">
 
+<!-- Primary Logo for Google -->
+<link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+
+<!-- PNG icons -->
+<link rel="icon" type="image/png" href="/static/img/sevor-logo.png" sizes="512x512">
+<link rel="apple-touch-icon" href="/static/img/sevor-logo.png">
+
+<!-- For Google Search -->
+<meta property="og:image" content="https://sevor.net/static/img/sevor-logo.png">
+<meta itemprop="image" content="https://sevor.net/static/img/sevor-logo.png">
 
 
   <!-- PWA -->
