--- a/app/templates/items_new.html
+++ b/app/templates/items_new.html
@@ -258,7 +258,7 @@ h2 {
 <input 
     type="file"
     id="imgInput"
-    name="images[]"
+    name="images"
     accept=".jpg,.jpeg,.png,.webp"
     multiple
     style="display:none"
