--- a/app/templates/items_new.html
+++ b/app/templates/items_new.html
@@ -239,8 +239,9 @@ h2 {
 
   </div>
 
-<div class="mb-3">
-  <label class="form-label">Images (up to 10)</label>
+
+<div class="mb-3" style="margin-top:-16px;">
+  <label class="form-label" style="margin-bottom:6px;">Images (up to 10)</label>
 
 <div class="upload-box" onclick="document.getElementById('imgInput').click();">
     <div class="upload-icon">
@@ -332,8 +333,7 @@ document.getElementById('imgInput').addEventListener('change', function(){
 </style>
 
 
-  <button class="btn btn-primary">Save</button>
-  <a href="/items" class="btn btn-outline-light">Back</a>
+  <button class="btn btn-primary" style="margin-top:6px;">Save</button>
 </form>
 
 {% endblock %}
